--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <spring.security.version>5.2.7.RELEASE</spring.security.version>
         <thymeleaf-springsecurity5.version>3.0.4.RELEASE</thymeleaf-springsecurity5.version>
         <redis-session.version>1.3.5.RELEASE</redis-session.version>
+
     </properties>
 
     <!--
@@ -52,6 +53,18 @@
     -->
     <dependencyManagement>
         <dependencies>
+
+            <!-- spring security安全框架 -->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring.security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring.security.version}</version>
+            </dependency>
             <!--spring-session 同步-->
             <dependency>
                 <groupId>org.springframework.session</groupId>
